2021-03-08  Saam Barati  <sbarati@apple.com>

        Using an undeclared private field inside eval shouldn't crash
        https://bugs.webkit.org/show_bug.cgi?id=222834
        <rdar://75035388>

        Reviewed by Yusuke Suzuki.

        * stress/declared-private-field-in-eval.js: Added.
        * stress/undeclared-private-field-in-eval.js: Added.

2021-03-06  Alexey Shvayka  <shvaikalesh@gmail.com>

        BooleanConstructor should be inlined in DFG / FTL
        https://bugs.webkit.org/show_bug.cgi?id=220322

        Reviewed by Yusuke Suzuki.

        Reorganize tests so the every UseKind / needsTypeCheck / invert combination is covered.

        * microbenchmarks/array-filter-boolean-constructor.js: Added.
        * stress/dfg-branch.js: Added.
        * stress/dfg-to-boolean.js: Added.
        * stress/logical-not-masquerades-as-undefined.js: Removed.
        * stress/logical-not-masquerades.js: Removed.
        * stress/logical-not.js: Removed.
        * stress/value-to-boolean.js: Removed.

2021-03-05  Tadeu Zagallo  <tzagallo@apple.com>

        OpGetPrivateName needs to be listed in FOR_EACH_OPCODE_WITH_VALUE_PROFILE
        https://bugs.webkit.org/show_bug.cgi?id=222775
        <rdar://74982634>

        Reviewed by Michael Saboff.

        * stress/private-name-assignment-in-constructor.js: Added.
        (Foo):

2021-03-05  Dmitry Bezhetskov  <dbezhetskov@igalia.com>

        [WASM-Function-References] Update ref.func to produce (ref $t)
        https://bugs.webkit.org/show_bug.cgi?id=222779

        Reviewed by Yusuke Suzuki.

        Make ref.func to produce non nullable reference type which
        incorporates signature index. Since in JSC signature index represents
        type of the function from Type section we use it instead of type_idx
        for representing type of function references.

        * wasm/wasm.json:

2021-03-04  Saam Barati  <sbarati@apple.com>
