@@ -1,3 +1,12 @@
+2021-03-09  Mark Lam  <mark.lam@apple.com>
+
+        Use --verifyGC=true on some JSC stress test configurations.
+        https://bugs.webkit.org/show_bug.cgi?id=222289
+
+        Reviewed by Filip Pizlo.
+
+        * Scripts/run-jsc-stress-tests:
+
 2021-03-09  Philippe Normand  <pnormand@igalia.com>
 
         [GStreamer][WebRTC] VideoEncoder still doesn't comply with WebKit style
